templates/infra/openshift/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: __SERVICE__-deny-all
  labels:
    app.kubernetes.io/name: __SERVICE__
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: __SERVICE__
  policyTypes:
    - Ingress
    - Egress
